--- a/project/templates/post_new.html
+++ b/project/templates/post_new.html
@@ -1,9 +1,11 @@
 {% extends 'header.html' %}
  
 {% block content %}
-    <h1>New post</h1>
-    <form action="" method="post">{% csrf_token %}
+<div class="post-entry">
+    <p class="post_title">Новая публикация</p>
+    <form class="add" action="" method="post">{% csrf_token %}
       {{ form.as_p }}
-      <input type="submit" value="Save" />
+      <input class="send" type="submit" value="Save" />
     </form>
+    </div>
 {% endblock content %}
