--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -1,10 +1,9 @@
-{% extends 'header.html' %}
- 
-{% block content %}
-<h2>Sign up</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Sign up</button>
-</form>
+{% extends 'header.html' %} &nbsp;{% block content %}
+<div class="post-entry">
+  <p class="post_title">Регистрация</p>
+  <form class="signup" action="" method="post">{% csrf_token %}
+    {{ form.as_p }}
+    <button class="send_login" type="submit">Войти</button>
+  </form>
+  </div>
 {% endblock content %}
