--- a/project/templates/post_delete.html
+++ b/project/templates/post_delete.html
@@ -1,9 +1,11 @@
 {% extends 'header.html' %}
  
 {% block content %}
+{% if user.is_authenticated %}
     <h1>Delete post</h1>
     <form action="" method="post">{% csrf_token %}
       <p>Are you sure you want to delete "{{ post.title }}"?</p>
       <input type="submit" value="Confirm" />
     </form>
+{% endif %}
 {% endblock content %}
