--- a/project/templates/post_edit.html
+++ b/project/templates/post_edit.html
@@ -1,9 +1,11 @@
 {% extends 'header.html' %}
  
 {% block content %}
+{% if user.is_authenticated %}}
     <h1>Edit post</h1>
     <form action="" method="post">{% csrf_token %}
       {{ form.as_p }}
     <input type="submit" value="Update" />
 </form>
+{% endif %}
 {% endblock content %}
