--- a/project/templates/post_new.html
+++ b/project/templates/post_new.html
@@ -1,6 +1,7 @@
 {% extends 'header.html' %}
  
 {% block content %}
+{% if user.is_authenticated %}
 <div class="post-entry">
     <p class="post_title">Новая публикация</p>
     <form class="add" action="" method="post">{% csrf_token %}
@@ -8,4 +9,5 @@
       <input class="send" type="submit" value="Save" />
     </form>
     </div>
+{% endif %}
 {% endblock content %}
